--- a/knightsTour/knightsTour.csproj
+++ b/knightsTour/knightsTour.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="KTAlgorithms\wbllt0k5.h1n~" />
+  </ItemGroup>
+
 </Project>
